<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">鼎记</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="goods_manager">商品管理</string>
    <string name="query_order">订单查询</string>
    <string name="backlog_order">未完成订单</string>
    <string name="completed_order">已完成订单</string>
    <string name="remark1">可以完成对现有商品的增删改查操作</string>
    <string name="remark2">可以对所有订单进行查询</string>
    <string name="remark3">可以订单进行处理</string>
    <string name="remark4">可以订单进行查询</string>
    <string name="acra_mail_subject">>This is crash report from %s app</string>
    <string name="crash_text">crash</string>
    <string name="system_manager">系统管理</string>
    <string name="choose_from_the_gallery">从图库中选择</string>
    <string name="take_phone">拍照</string>
    <string name="cancel">取消</string>
    <string name="add_new_goods">添加新商品</string>
    <string name="add_goods">添加商品</string>
    <string name="fail_connect_server_text">服务器返回错误</string>
    <string name="save">保存</string>
    <string name="goods_price">商品价格</string>
    <string name="goods_des">商品介绍</string>
    <string name="goods_name">商品名称</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="price">价格:</string>
    <string name="edit_goods">编辑商品</string>
    <string name="split">/</string>
    <string name="price_unit" formatted="false">¥%.2f/%s</string>
    <string name="ding_ji_goods">鼎记肉品</string>
    <string name="products_introduction">商品介绍</string>
    <string name="quantity">购买数量</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="please_press_again_to_exit_app">再按下返回将会退出应用</string>
    <string name="please_press_again_to_login_activity">再按下返回将会退出到登录界面</string>
    <string name="quantity_must_greater_than_0">数量必须大于0</string>
    <string name="my_shopping_cart">我的购物车</string>
    <string name="yuan">元</string>
    <string name="amount_yuan" formatted="false">¥%.2f元</string>
    <string name="price_total">价格总计</string>
    <string name="close_an_account">结算</string>
    <string name="account">账号</string>
    <string name="history_order">历史订单</string>
    <string name="suggest">意见及建议</string>
    <string name="about_ding_ji">关于鼎记</string>
    <string name="problem">常见问题</string>
    <string name="modify_password">修改密码</string>
    <string name="manager_address">收货地址管理</string>
    <string name="account_manager">账号管理</string>
    <string name="add_new_address">添加新地址</string>
    <string name="contacts">联系人</string>
    <string name="phone">联系电话</string>
    <string name="detail_address">详细地址</string>
    <string name="add_address">新增地址</string>
    <string name="data_incomplete">数据填写不全</string>
    <string name="delete_address">删除收货地址</string>
    <string name="set_default_address">设为默认收货地址</string>
    <string name="address_detail">收货地址</string>
    <string name="modify">修改</string>
    <string name="modify_address">修改地址</string>
    <string name="confirm_order">订单确认</string>
    <string name="submit_order">确认下单</string>
    <string name="you_can_select">您也可以选择</string>
    <string name="other_address"><u>其他收货地址</u></string>
    <string name="address_info">收货信息</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="the_two_passwords_you_entered_do_not_match">两次输入的密码不一致</string>
    <string name="modify_pwd">修改密码</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="tell_me_your_suggest">对鼎记有什么想说的呢?告诉我们吧~</string>
    <string name="submit">提交</string>
    <string name="suggset">意见与建议</string>
    <string name="is_processing">正在处理，请稍后…</string>
    <string name="is_loading">正在登陆</string>
    <string name="is_upload_image">正在上传图片</string>
    <string name="goods_category">商品类型</string>
    <string name="is_add_goods">正在添加商品</string>
    <string name="is_query_goods">正在查询商品</string>
    <string name="is_modify_goods">正在修改商品</string>
    <string name="is_delete_goods">正在删除商品</string>
    <string name="is_set_address">正在设置地址</string>
    <string name="is_delete_address">正在删除地址</string>
    <string name="is_get_addrss">正在获取地址</string>
    <string name="is_add_address">正在增加地址</string>
    <string name="is_modify_address">正在修改地址</string>
    <string name="is_get_default_address">正在获取默认地址</string>
    <string name="please_add_picture">请添加图片</string>
    <string name="is_register">正在注册</string>
    <string name="please_input_accoutn">请输入账号</string>
    <string name="plesase_input_pwd">请输入密码</string>
    <string name="is_modify_pwd">正在修改密码</string>
    <string name="modify_pwd_success">密码修改成功</string>
    <string name="logout">退出登录</string>
    <string name="is_logout">正在登出</string>
    <string name="is_upload">正在上传</string>
    <string name="submit_success">提交成功</string>
    <string name="is_submit_order">正在提交订单</string>
    <string name="submit_order_success">订单提交成功</string>
    <string name="my_order">我的订单</string>
    <string name="order_number">订单号</string>
    <string name="query_order_hint_text">请输入订单号、收件人查询订单</string>
    <string name="shopping_goods">购买商品</string>
    <string name="receive_address">收货信息</string>
    <string name="order_status">订单状态</string>
    <string name="order">订单</string>
    <string name="is_query_order_detail">正在查询订单详情</string>
    <string name="is_query">正在查询</string>
    <string name="unfinsih_order">未完成订单</string>
    <string name="finish_order">已完成订单</string>
    <string name="change_order_status">更改订单状态</string>
    <string name="is_change_order_status">正在更改订单状态</string>
    <string name="change_order_status_success">更改订单状态成功</string>
    <string name="add_to_shopping_cart_success">成功添加到购物车</string>
    <string name="is_get_problem">正在获取问题</string>
    <string name="check_version">检测版本</string>

</resources>
