<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/view_margin_left_right_to_border"
    android:paddingRight="@dimen/view_margin_left_right_to_border">

    <Button
        android:id="@+id/bt_goods_manager"
        style="@style/my_positive_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/goods_manager" />

    <TextView
        style="@style/remark_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remark1" />

    <Button
        android:id="@+id/bt_order_query"
        style="@style/my_positive_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/query_order" />

    <TextView
        style="@style/remark_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remark2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_backlog_order"
                style="@style/my_positive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/backlog_order" />

            <TextView
                style="@style/remark_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_completed_order"
                style="@style/my_positive_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/completed_order" />

            <TextView
                style="@style/remark_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark4" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>