<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_white"
    android:orientation="vertical"
    android:padding="@dimen/view_margin_left_right_to_border">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_view"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_old_pwd"
            style="@style/black_text_h"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:hint="@string/old_pwd"
            android:padding="@dimen/edit_text_padding" />

        <include layout="@layout/split_view" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/black_text_h"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:hint="@string/new_pwd"
            android:padding="@dimen/edit_text_padding" />

        <include layout="@layout/split_view" />

        <EditText
            android:id="@+id/et_confirm_pwd"
            style="@style/black_text_h"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:hint="@string/please_input_password_again"
            android:padding="@dimen/edit_text_padding" />
    </LinearLayout>

</LinearLayout>