<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_white"
    android:fadingEdgeLength="30dp"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/view_margin_left_right_to_border"
        android:paddingRight="@dimen/view_margin_left_right_to_border">

        <com.lixiangers.dingji.view.AddPictureView
            android:id="@+id/add_picture_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/tv_goods_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_picture_view"
            android:layout_marginTop="10dp"
            android:text="@string/goods_category"
            android:textColor="@color/my_black"
            android:textSize="@dimen/text_size_h" />

        <EditText
            android:id="@+id/et_goods_category"
            style="@style/my_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_goods_category"
            android:layout_marginTop="10dp"
            android:maxLength="20" />

        <TextView
            android:id="@+id/tv_modify_good_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_goods_category"
            android:layout_marginTop="10dp"
            android:text="@string/goods_name"
            android:textColor="@color/my_black"
            android:textSize="@dimen/text_size_h" />

        <EditText
            android:id="@+id/et_good_name_input"
            style="@style/my_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_modify_good_name"
            android:layout_marginTop="10dp"
            android:maxLength="20" />

        <TextView
            android:id="@+id/tv_modify_good_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_good_name_input"
            android:layout_marginTop="15dp"
            android:text="@string/goods_des"
            android:textColor="@color/my_black"
            android:textSize="@dimen/text_size_h" />

        <EditText
            android:id="@+id/et_goods_des"
            style="@style/my_edit_view"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/tv_modify_good_price"
            android:layout_marginTop="10dp"
            android:maxLength="200"
            android:gravity="top"
            android:singleLine="false" />

        <LinearLayout
            android:id="@+id/price_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_goods_des"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_good_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goods_price"
                android:textColor="@color/my_black"
                android:textSize="@dimen/text_size_h" />

            <EditText
                android:id="@+id/et_goods_price"
                style="@style/my_edit_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/split"
                android:textColor="@color/my_red"
                android:textSize="@dimen/text_size_h" />

            <EditText
                android:id="@+id/et_goods_unit"
                style="@style/my_edit_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:id="@+id/positive_button"
            style="@style/my_positive_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_view"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:text="@string/save" />

        <Button
            android:id="@+id/negative_button"
            style="@style/my_negative_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/positive_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/delete" />


    </RelativeLayout>
</ScrollView>