<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_white"
    android:orientation="vertical"
    android:padding="@dimen/view_margin_left_right_to_border">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_view"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account"
            style="@style/white_text_h"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:hint="@string/please_input_account"
            android:padding="@dimen/edit_text_padding" />

        <include layout="@layout/split_view" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/white_text_h"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent"
            android:hint="@string/pleae_input_password"
            android:padding="@dimen/edit_text_padding" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        style="@style/my_positive_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_left_right_to_border"
        android:text="@string/login" />

    <Button
        android:id="@+id/bt_register"
        style="@style/my_negative_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_left_right_to_border"
        android:text="@string/register" />

</LinearLayout>