<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_white"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/my_white"
        android:orientation="vertical"
        android:padding="@dimen/view_margin_left_right_to_border">

        <TextView
            style="@style/black_text_xh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="收货信息" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                style="@style/gray_text_h"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/contacts" />

            <TextView
                android:id="@+id/tv_contact"
                style="@style/black_text_h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                style="@style/gray_text_h"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/black_text_h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/gray_text_h"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_address" />

            <TextView
                android:id="@+id/tv_detail_area"
                style="@style/black_text_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:singleLine="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/view_margin_left_right_to_border"
        android:paddingRight="@dimen/view_margin_left_right_to_border"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/bt_delete_address"
            style="@style/my_negative_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_address" />

        <Button
            android:id="@+id/bt_set_default"
            style="@style/my_positive_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/set_default_address" />

    </LinearLayout>
</LinearLayout>